# sfa3d_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: rviz_config
launch/: 3d_lidar_object_detection.launch
scripts/: sfa3d_ros_wrapper.py
