<?xml version="1.0"?>
<package format="2">
  <name>sfa3d_ros</name>
  <version>0.0.0</version>
  <description>The sfa3d_ros package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
  <build_depend version_gte="0.6.1">catkin_virtualenv</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-rospkg-modules</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <export>
    <pip_requirements>SFA3D/requirements.txt</pip_requirements>
  </export>
</package>
